--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
   "arrowParens": "avoid",
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5",
   "useTabs": false,
-  "printWidth": 80
+  "printWidth": 120
 }
